fix header styling on mobile

--- a/src/scss/ContentLists/_list.scss
+++ b/src/scss/ContentLists/_list.scss
@@ -37,6 +37,7 @@
 			margin-bottom: 50px;
 			font-size: 60px;
 			position: relative;
+			line-height: 1em;
 		}
 
 		.create-new {
@@ -258,7 +259,7 @@
 		padding: 0 15px;
 
 		.color-block {
-			height: 420px;
+			height: 490px;
 		}
 
 		.list-header {
@@ -266,7 +267,7 @@
 				margin: 20px 0;
 				margin-bottom: 40px;
 				text-align: center;
-				font-size: 46px;
+				font-size: 40px;
 			}
 
 			.create-new {
